// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl to match snapshot 1`] = `
<body>
  <div>
    <div
      class=" md form-group"
    >
      <label
        class="form-label"
      >
         
      </label>
      <div
        class="form-control form-button-group "
      >
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn btn-primary"
            data-attr="true"
            type="button"
          >
            Yes
          </button>
          <button
            class="btn btn-primary"
            data-attr="false"
            type="button"
          >
            No
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FormControl to match snapshot with suggestion default text 1`] = `
<body>
  <div>
    <div
      class=" md form-group"
    >
      <label
        class="form-label"
      >
         
      </label>
      <div
        class="d-flex"
      >
        <input
          autocomplete="off"
          class="form-control"
          name="field1"
          type="text"
          value="1234"
        />
        <span
          class="suggest-text"
        >
          test
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`FormControl to match snapshot with suggestion is invalid 1`] = `
<body>
  <div>
    <div
      class=" invalid md form-group"
    >
      <label
        class="form-label"
      >
         
      </label>
      <div
        class="d-flex"
      >
        <input
          autocomplete="off"
          class="form-control"
          name="field1"
          type="text"
          value="1234"
        />
        <span
          class="suggest-text"
        >
          test
        </span>
        <span
          class="check-cirle invalid"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-times-circle fa-w-16 fa-sm "
            data-icon="times-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        class="invalid-feedback valid-feedback"
      />
    </div>
  </div>
</body>
`;

exports[`FormControl to match snapshot with suggestion is valid 1`] = `
<body>
  <div>
    <div
      class=" md form-group"
    >
      <label
        class="form-label"
      >
         
      </label>
      <div
        class="d-flex"
      >
        <input
          autocomplete="off"
          class="form-control"
          name="field1"
          type="text"
          value="1234"
        />
        <span
          class="suggest-text"
        >
          test
        </span>
        <span
          class="check-cirle valid"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-check-circle fa-w-16 fa-sm "
            data-icon="check-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`FormControl to match snapshot with suggestion loading 1`] = `
<body>
  <div>
    <div
      class=" md form-group"
    >
      <label
        class="form-label"
      >
         
      </label>
      <div
        class="d-flex"
      >
        <input
          autocomplete="off"
          class="form-control"
          name="field1"
          type="text"
          value="1234"
        />
        <span
          class="check-cirle"
        >
          <div
            class="spinner-row d-flex align-items-center"
          >
            <div
              class="spinner-border spinner-border-sm"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
              
            
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;
